validation de formulaire done

--- a/front/vue/package.json
+++ b/front/vue/package.json
@@ -12,6 +12,7 @@
     "front": "npm run dev"
   },
   "dependencies": {
+    "@previewjs/cli": "^1.28.1",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
