--- a/front/vue/package.json
+++ b/front/vue/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@previewjs/cli": "^1.28.1",
+    "axios": "^1.7.9",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
