--- a/front/vue/package.json
+++ b/front/vue/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
+    "laravel-vite-plugin": "^1.2.0",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.16",
