--- a/backend/fly-laravel/.env.example
+++ b/backend/fly-laravel/.env.example
@@ -48,14 +48,17 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+
+
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=mpeakyblinders2001@gmail.com
+MAIL_PASSWORD=kkri scrb mkze wyqx
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=afroune.2001.mohamed@outlook.com
+MAIL_FROM_NAME="ADEM Laravel FlyingWeb Application"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
